--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1 {
     color: #240090;
     padding-top: 20px;
 }
-h2 {
+.location {
     font-size: 35px;
     margin: 10px;
 }
@@ -31,24 +31,19 @@ p {
 }
 .btn-warning {
     top: 30px;
-}
-input {
-    width: 70%;
-    height: 60px;
-    font-size: 20px;
-    margin: 0 auto;
-    display: flex;
-    position: relative;
-    top: 30px;
-    border-radius: 5px;
     box-shadow: rgb(0 0 0 / 19%) 0px 10px 20px, rgb(0 0 0 / 23%) 0px 6px 6px;
 }
-.main {
+input {
+    position: relative;
+    top: 30px;
+    box-shadow: rgb(0 0 0 / 19%) 0px 10px 20px, rgb(0 0 0 / 23%) 0px 6px 6px;
+}
+.weather-container {
     color: white;
     text-align: center;
     padding-top: 42px;
 }
-.days-of-the-week {
-    width: 100%;
-    
+.temperature-value {
+    font-size: 40px;
+    padding-bottom: 15px;
 }
